--- a/BreakingBad-main/breaking bad/css/style.css
+++ b/BreakingBad-main/breaking bad/css/style.css
@@ -21,7 +21,7 @@ footer {
   text-align: center;
   padding: 20px;
   margin-top: 35px;
-  background-color: #af6010;
+  background-color: #a67442;
   margin-left: -10px;
   margin-right: -10px;
   position: fixed;
@@ -38,10 +38,11 @@ div {
   padding-bottom: 20px;
   padding-right: 55px;
   padding-left: 55px;
+  /*border-bottom: 1px solid $cb;*/
 }
 
 .collapsible {
-  background-color: #eee;
+  background-color: white;
   color: #444;
   cursor: pointer;
   padding: 18px;
@@ -60,5 +61,23 @@ div {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: white;
+  border-bottom: 1px solid;
+  border-color: #ccc;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #369457;
+  border: solid;
+  text-align: center;
+}
+
+td, th, tr, tbody, thead {
+  border: solid;
+}
+
+th {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
