--- a/BreakingBad-main/breaking bad/scss/style.scss
+++ b/BreakingBad-main/breaking bad/scss/style.scss
@@ -9,7 +9,11 @@ $cg6:#032202;
 $co1:#af6010;
 $co2:#a67442;
 $co3:#a67442;
+$cg: lightgray;
 $m1: -10px;
+$ha: #ccc;
+$n: none;
+$s: solid;
 
 header {
     padding: 60px;
@@ -20,7 +24,7 @@ header {
     background-size: cover;
     color: $cw;
     font-size: 30px;
-    border-bottom: 1px solid $cb;
+    border-bottom: 1px $s $cb;
     text-shadow: 2px 2px $cb;
     margin: $m1;
   }
@@ -34,7 +38,7 @@ footer {
   text-align: center;
   padding: 20px;
   margin-top: 35px;
-  background-color: $co1;
+  background-color: $co2;
   margin-left: $m1;
   margin-right: $m1;
   position:fixed;
@@ -51,7 +55,7 @@ div {
   padding-bottom: 20px;
   padding-right: 55px;
   padding-left: 55px;
-  border-bottom: 1px solid $cb;
+  /*border-bottom: 1px solid $cb;*/
 }
 
  .collapsible {
@@ -60,20 +64,39 @@ div {
   cursor: pointer;
   padding: 18px;
   width: 100%;
-  border: none;
+  border: $n;
   text-align: left;
-  outline: none;
+  outline: $n;
   font-size: 15px;
 }
 
 .active, .collapsible:hover {
-  background-color: #ccc;
+  background-color:$ha;
 }
 
 
 .content {
   padding: 0 18px;
-  display: none;
+  display: $n;
   overflow: hidden;
   background-color:$cw;
+  border-bottom: 1px $s;
+  border-color:$ha;
 } 
+
+
+table {
+  margin-left:auto;
+  margin-right:auto;
+  background-color: $cg5;
+  border:$s;
+  text-align: center;
+}
+
+td,th,tr,tbody,thead{
+  border: $s;
+}
+
+th {
+  text-align: center;
+}
